:bug: fixing viewports and scrollbar

--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -1,6 +1,6 @@
 #hero {
   @include gradient;
-  width: 100%;
+  
   height: 100%;
   padding-top: 5.5rem;
     padding-bottom: 2rem;
