--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,6 +52,24 @@ $orange-colors: (
 // import bootstrap whole sass lib (incorporates all above redefined vars & values)
 @import "~bootstrap/scss/bootstrap";
 
+// globals
+
+//Scrollbar
+::selection {
+  background: $primary;
+  color: #2c333a;
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+::-webkit-scrollbar-thumb {
+  background: #0e1d2c;
+  border-radius: 10px;
+}
+
 // helpers
 @import "./helpers";
 //import custom components
